# brew-browser

./: .gitignore  BUILD.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: linux-build.yml
docs/: BUILD.md
docs/release-notes/: 0.4.0.md  unreleased.md
landing/: README.md  index.html  manifest.json  style.css
memory-bank/: NEXT-SESSION.md  activeContext.md  decisions.md  phase15-plan.md  progress.md  projectbrief.md  security.md  techContext.md  toc.md
memory-bank/phases/: phase12-plan.md  phase13-plan.md
memory-bank/scans/2026-05-23/: brew-browser.cdx.json  cargo-deny-full.txt  cargo-deny.txt  clippy.txt  geiger.txt  gitleaks.json  gitleaks.txt  osv-scanner.txt  phase12-security-review.md  semgrep.json
memory-bank/tasks/2026-05/: 01-v0.1.0-initial-release.md  02-categorize-bulk-run-and-landing.md  03-release-pipeline-signed-notarized.md  04-next-session-handoff-doc.md  05-phase-9-category-linking.md  06-phase-11-dashboard-services-vibrancy-persistence.md  07-phase-12-wave-1-2-catalog-settings-paranoid-github.md  08-phase-12f-13-github-authed-enrichment-infra.md  09-phase-12g-13b-cleanup-tier-a-bake-and-polish.md  10-v0.2.0-release-title-bar-sidebar-restructure.md  11-github-auth-hydration-fixes.md  12-v0.2.1-release-hotfix.md  13-phase-15-updater-and-offline-mode-rename.md  14-issue-1-hunt-cache-loop.md  15-github-integration-completion.md  19-v0.4.0-backend.md  21-native-swift-liquid-glass-rebuild.md  21-override-manual-install.md  22-native-swift-liquid-glass-rebuild.md  99-deferred-and-dropped.md  README.md
memory-bank/tasks/2026-06/: 01-native-live-enrichment-notifications.md  01-tauri-native-parity.md  02-native-trending-tap-tokens-and-refresh-feedback.md  02-tauri-trending-tap-tokens.md  03-native-services-panel.md  04-native-detail-autoclose-on-section-change.md  05-native-snapshot-id-validation.md  06-native-dashboard-load-perf.md  07-native-github-toolbar-card-oneprompt.md  08-native-activity-parity.md  09-native-parity-roadmap.md  10-native-parity-polish-sparkle-rename.md  11-launch-batch-progress-category-upgrade.md  13-intel-builds-onboarding-linux.md  README.md
native/: .gitignore  AppIcon.icns  Package.resolved  Package.swift  README.md  build-app.sh  release.sh
native/Sources/BrewBrowser/: AppModel.swift  BrewBrowserApp.swift  BrewService.swift  ContentView.swift  GitHubService.swift
native/Sources/BrewBrowserKit/: AboutView.swift  Activity.swift  ActivityView.swift  AppModel.swift  AppSettings.swift  BrewOutputParsing.swift  BrewService.swift  CatalogService.swift  Categories.swift  CommandPaletteView.swift  ContentView.swift  DashboardView.swift  Deprecation.swift  DiscoverView.swift  Enrichment.swift  EnrichmentLiveService.swift  GitHubService.swift  GithubMarkIcon.swift  IconService.swift  InfoButton.swift  LocalPrefs.swift  NotificationService.swift  OnboardingView.swift  PackageDetailView.swift  ReportIssue.swift  ServicesView.swift  SettingsView.swift  SnapshotStore.swift  SnapshotsView.swift  Toast.swift  TrendingHistoryService.swift  TrendingService.swift  TrendingView.swift  UpdaterController.swift  UpgradeSheet.swift  VulnsService.swift
native/Sources/BrewBrowserKit/Resources/: categories.json  enrichment.json
native/Sources/BrewBrowserKit/Resources/catalog/: manifest.json
native/Tests/BrewBrowserKitTests/: BrewOutputParsingTests.swift  DeprecationTests.swift  OnboardingStateTests.swift  ReverseDependentsTests.swift  VulnsParsingTests.swift
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs  types.rs
src-tauri/src/brew/: error_patterns.rs  exec.rs  parse.rs  paths.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/commands/: actions.rs  brewfile.rs  cask_icon.rs  cask_icon_homepage.rs  catalog.rs  disk_usage.rs  enrichment.rs  env.rs  github.rs  mod.rs  search.rs  settings.rs  trending.rs  updater.rs
src-tauri/src/enrichment/: live.rs  mod.rs
src-tauri/src/github/: auth.rs
src-tauri/src/trending/: cache.rs  client.rs  mod.rs  velocity.rs
src-tauri/src/trending/history/: cache.rs  client.rs  mod.rs
src-tauri/src/vulns/: cache.rs  client.rs
src/lib/: api.ts  types.ts
src/lib/components/: AboutModal.svelte  ActivityDrawer.svelte  ActivityHistory.svelte  Dashboard.svelte  DestructiveConfirm.svelte  DeviceFlowModal.svelte  Discover.svelte  Library.svelte  OnboardingView.svelte  PackageDetail.svelte  PackageRow.svelte  PackageRowIcon.svelte  Settings.svelte  SettingsSectionGitHub.svelte  SettingsSectionLiveEnrichment.svelte  SettingsSectionNetwork.svelte  SettingsSectionUpdates.svelte  Sidebar.svelte  Snapshots.svelte  TitlebarControls.svelte  Toast.svelte  Trending.svelte  UpdateIndicator.svelte  UpgradeModal.svelte
src/lib/stores/: catalog.svelte.ts  categories.svelte.ts  enrichment.svelte.ts  env.svelte.ts  github.svelte.ts  updater.svelte.ts  vulnerabilities.svelte.ts
src/lib/util/: categoryIcon.ts  platform.ts  reportIssue.ts  token.ts
src/routes/: +layout.svelte  +page.svelte
tools/categorize/: categorize.py
tools/pipeline/: README.md  nightly-refresh.sh  render_served.py
tools/release/: publish-manifest.sh
tools/trending-collector/: README.md  collect.js
tools/trending-collector/lib/: common.js
