[package]
name = "brew-browser"
version = "0.4.0"
description = "An honestly open Homebrew browser, manager, and Brewfile snapshot tool."
authors = ["Michael Sitarzewski"]
edition = "2021"
license = "MIT"

[lib]
name = "brew_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Phase 15 — in-app updater (manifest fetch, sha256 + minisign verify,
# atomic .app bundle replacement). Plugin endpoint + minisign public
# key are wired in `tauri.conf.json` and `src/lib.rs` respectively.
tauri-plugin-updater = "2"
# Phase 15 — needed for the `UpdaterBackend` trait abstraction so unit
# tests can swap in a mock implementation without going through the
# real plugin (which requires a live `App` + HTTP).
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }

# Error handling
thiserror = "1"

# Job IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP for trending analytics
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# OS-correct paths for ~/Library/Application Support
dirs = "5"

# Base64 encoding for cask_icon data URLs
base64 = "0.22"

# Gzip codec for the bundled catalog (Phase 12a). Used both for
# decompressing the bundled `formula.json.gz` / `cask.json.gz` and for
# compressing the user-refreshed copy before atomic write.
flate2 = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OS-native secret storage. Phase 12e (GitHub Device Flow) stores the
# OAuth access token in the macOS Keychain under
# `com.zerologic.brew-browser` / `github_access_token`. The crate fans out to
# Keychain on macOS, Credential Manager on Windows, Secret Service on
# Linux — we only use the macOS path.
keyring = { version = "3", features = ["apple-native"] }
# URL-encoded form bodies for the GitHub Device Flow endpoints.
# `serde_urlencoded` is already pulled in transitively by `reqwest`
# but `url` (parsing) is not. Keep this dep tight.
url = "2"

# Native macOS window vibrancy (NSVisualEffectView) — gives the sidebar that
# "frosted glass" look the rest of macOS uses. Cross-platform crate; we only
# call its macOS APIs.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[dev-dependencies]
# Reserved for future integration tests that need a sandbox dir
# (e.g. brewfile_export / brewfile_import) — currently unused by the
# Wave 3 test pass but kept here so Reality Checker can wire in tests
# without bumping deps.
tempfile = "3"
