[package]
name = "brew-browser"
version = "0.6.0"
description = "An honestly open Homebrew browser, manager, and Brewfile snapshot tool."
authors = ["Michael Sitarzewski"]
edition = "2021"
license = "MIT"

[lib]
name = "brew_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Issue #17 — persist window size + position across launches. Registered in
# `lib.rs`; auto-saves geometry on move/resize and on exit, then restores it
# on the next launch. No frontend wiring — the plugin hooks window events
# natively, so registration is the whole feature.
tauri-plugin-window-state = "2"
# Phase 15 — in-app updater (manifest fetch, sha256 + minisign verify,
# atomic .app bundle replacement). Plugin endpoint + minisign public
# key are wired in `tauri.conf.json` and `src/lib.rs` respectively.
tauri-plugin-updater = "2"
# Phase 15 — needed for the `UpdaterBackend` trait abstraction so unit
# tests can swap in a mock implementation without going through the
# real plugin (which requires a live `App` + HTTP).
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }

# Error handling
thiserror = "1"

# Job IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP for trending analytics
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# OS-correct paths for ~/Library/Application Support
dirs = "5"

# Base64 encoding for cask_icon data URLs
base64 = "0.22"

# v0.5.0 — install-set fingerprinting + cache-key hashing for the
# vulnerability-scanning subsystem. SHA-256 keeps the fingerprint stable
# across runs (DefaultHasher is non-deterministic) so the "install set
# unchanged since last scan, skip the whole sweep" optimization works.
# Both already transit through the lockfile via tauri-plugin-updater /
# reqwest — pinning them here makes the dependency intentional rather
# than incidental.
sha2 = "0.10"
hex = "0.4"

# Gzip codec for the bundled catalog (Phase 12a). Used both for
# decompressing the bundled `formula.json.gz` / `cask.json.gz` and for
# compressing the user-refreshed copy before atomic write.
flate2 = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL-encoded form bodies for the GitHub Device Flow endpoints.
# `serde_urlencoded` is already pulled in transitively by `reqwest`
# but `url` (parsing) is not. Keep this dep tight.
url = "2"

# Native macOS window vibrancy (NSVisualEffectView) — gives the sidebar that
# "frosted glass" look the rest of macOS uses. Cross-platform crate; we only
# call its macOS APIs.
#
# OS-native secret storage. Phase 12e (GitHub Device Flow) stores the
# OAuth access token under `com.zerologic.brew-browser` /
# `github_access_token`. The `keyring` crate exposes a single unified
# `Entry` / `Error` API (`github/auth.rs::SystemKeychain`) regardless of
# backend, so only the Cargo feature set is platform-specific:
#   - macOS  → `apple-native` (Security framework / Keychain).
#   - Linux  → `sync-secret-service` (persistent across reboot, backed by
#     gnome-keyring / kwallet via the Secret Service D-Bus API — NOT the
#     session-scoped kernel keyutils) + `crypto-rust` (pure-Rust AES, so
#     no system OpenSSL build dependency on CI). See the Linux target
#     section below.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
keyring = { version = "3", features = ["apple-native"] }
# Direct use of the Security framework for a single batched Keychain read
# (one SecItemCopyMatching for all GitHub items → one auth prompt instead of
# three). Pinned to "2" to unify with the version keyring already compiles.
security-framework = "2"

# Linux secret storage. Secret Service requires a running daemon
# (gnome-keyring / kwallet); on a headless box or a minimal WM without
# one, GitHub sign-in fails closed via `BrewError::KeychainUnavailable`
# (the rest of the app is unaffected). See `github/auth.rs`.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
# Reserved for future integration tests that need a sandbox dir
# (e.g. brewfile_export / brewfile_import) — currently unused by the
# Wave 3 test pass but kept here so Reality Checker can wire in tests
# without bumping deps.
tempfile = "3"
